# video-game-design

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: README.md
inc/: common.hpp  controller.hpp  displaymanager.hpp  dot.hpp  eventhandler.hpp  gputarget.hpp  initialize.hpp  messagetypes.hpp  sound.hpp  threadmanager.hpp  vec2.hpp  window.hpp
inc/physics/: aabb.hpp  body.hpp  broadphase.hpp  circle.hpp  collisions.hpp  common.hpp  contact.hpp  edge.hpp  joint.hpp  polygon.hpp  shape.hpp  world.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  controller.cpp  displaymanager.cpp  dot.cpp  eventhandler.cpp  gputarget.cpp  initialize.cpp  main.cpp  sound.cpp  window.cpp
src/physics/: aabb.cpp  body.cpp  broadphase.cpp  circle.cpp  collisions.cpp  common.cpp  polygon.cpp  shape.cpp  world.cpp
test/: CMakeLists.txt  aabb.cpp  broadphase.cpp  collisions.cpp  threadmanager.cpp  vec2.cpp
